--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
         <use xlink:href="img/sprite.svg#icon-global"></use>
       </svg>
       <h4 class="heading-4 heading-4--dark">World's best luxury homes</h4>
-      <p class="feature__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio
-        necessitatibus pariatur voluptatibus.</p>
+      <p class="feature__text">Our network provides access to luxury real estate and homes for sale worldwide.</p>
     </div>
 
     <div class="feature">
@@ -70,8 +69,10 @@
         <use xlink:href="img/sprite.svg#icon-trophy"></use>
       </svg>
       <h4 class="heading-4 heading-4--dark">Only the best properties</h4>
-      <p class="feature__text">Voluptatum mollitia quae. Vero ipsum sapiente molestias accusamus rerum sed a eligendi
-        aut quia.</p>
+      <p class="feature__text"> The
+        listings include a large inventory of luxury homes for sale. Our listings include all types of homes, including
+        houses, condos, townhomes, villas and more.
+      </p>
     </div>
 
     <div class="feature">
@@ -79,7 +80,8 @@
         <use xlink:href="img/sprite.svg#icon-map-pin"></use>
       </svg>
       <h4 class="heading-4 heading-4--dark">All homes in in top locations</h4>
-      <p class="feature__text">Tenetur distinctio necessitatibus pariatur voluptatibus quidem consequatur harum.</p>
+      <p class="feature__text"> We can match your lifestyle choices such as waterfront, golf,
+        island, vacation, mountain and many others.</p>
     </div>
 
     <div class="feature">
@@ -87,25 +89,25 @@
         <use xlink:href="img/sprite.svg#icon-key"></use>
       </svg>
       <h4 class="heading-4 heading-4--dark">New home in one week</h4>
-      <p class="feature__text">Vero ipsum sapiente molestias accusamus rerum. Lorem, ipsum dolor sit amet consectetur
-        adipisicing elit.</p>
+      <p class="feature__text"> Let's us know your wishes and needs, we soon be back to you with a good listing for you
+        in no time</p>
     </div>
 
     <div class="feature">
       <svg class="feature__icon">
         <use xlink:href="img/sprite.svg#icon-presentation"></use>
       </svg>
-      <h4 class="heading-4 heading-4--dark">Top 1% realtors</h4>
-      <p class="feature__text">Quidem consequatur harum, voluptatum mollitia quae. Tenetur distinctio necessitatibus
-        pariatur voluptatibus.</p>
+      <h4 class="heading-4 heading-4--dark">Top 1% realtors</h4> Our team of specialized luxury listing experts dedicate
+      themselves to providing a hands-on, all-encompassing approach to customer care
+      <p class="feature__text"> </p>
     </div>
 
     <div class="feature">
       <svg class="feature__icon">
         <use xlink:href="img/sprite.svg#icon-lock"></use>
       </svg>
-      <h4 class="heading-4 heading-4--dark">Secure payments on nexter</h4>
-      <p class="feature__text">Pariatur voluptatibus quidem consequatur harum, voluptatum mollitia quae.</p>
+      <h4 class="heading-4 heading-4--dark">Secure payments</h4>
+      <p class="feature__text">With us, payment process has never been so easy and secured </p>
     </div>
   </section>
 
@@ -118,8 +120,9 @@
     <h3 class="heading-3 mb-sm">Happy Customers</h3>
     <h2 class="heading-2 heading-2--dark mb-md">&ldquo;The best decision of our lives&rdquo;</h2>
     <p class="story__text">
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio necessitatibus pariatur voluptatibus.
-      Quidem consequatur harum volupta!
+      " We greatly appreciated his honest and straight forward feedback on the homes we were interested in. This was
+      especially important as we shopped for our home from NY and Sheldon viewed many homes for us, saving us numerous
+      trips. Ultimately, with this guidance we were able to land the perfect home.”
     </p>
     <button class="btn">Find your home</button>
   </div>
